[package]
name = "openpon"
description = "Panel matching puzzle game"
license = "MIT"
version = "0.1.0"
authors = ["Ruby Lazuli L. <nipkraps@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = "0.5.1"
num = "0.2.1"
rand = "0.7.3"
sdl2 = { version = "0.34.0", features = ["image"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
